Base template for website  - This is going to be a basic start, will add more later  - Their are probably weird platform bugs that I will have to fix later

--- a/index.html
+++ b/index.html
@@ -6,59 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zachary Zhang</title>
 
-  <meta name="description" content="A basic personal website">
+  <meta name="description" content="My personal website with easy ways to contact me and checkout what I work on.">
   <meta name="keywords" content="">
   <meta name="author" content="Zachary Zhang">
-  
+
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
 
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="flex column">
-  <header class="flex column background-color">
-    <div class="logo font-white flex center">&#60;&#47;&#62;</div>
-    <div class="social flex center">
-      <div class="button"><a class="button-link font-white flex" href="https://github.com/" title="Link to my GitHub profile"><img src="images/GitHub-Mark/PNG/GitHub-Mark-Light-32px.png" alt="GitHub Logo">Check out my GitHub</a></div>
-      <div class="button"><a class="button-link font-white flex" href="https://www.linkedin.com/" title="Link to my LinkedIn profile"><img src="images/LinkedIn-Logos/LI-In-Bug.png" alt="LinkedIn Logo">Add me on LinkedIn</a></div>
-    </div>
-  </header>
-  <main class="flex column">
-    <div class="center flex"><h1>About Me</h1></div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-      anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-      anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-      anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-      anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-      anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-      anim id est laborum.</p>
-  </main>
-  <footer class="background-color flex row">
-    <div class="font-gray">&copy; Copyright 2022, Zachary Zachary</div>
-    <div><a class="font-gray" title="Link to Website GitHub Repository" href="https://github.com/Frey-mond/studious-potato">Website GitHub Repo</a></div>
+  <div class="page-container flex center column">
+    <header class="flex row">
+        <a href="https://github.com/freymondz" class="button">Check out my GitHub</a>
+        <a href="https://www.linkedin.com/in/freymond/" class="button">Add me on LinkedIn</a>
+    </header>
+    <main>
+      Hello, I'm Zachary Zhang. I'm a student at the University of Washington Studying Informatics.
+    </main>
+  </div>
+
+  <footer class="flex row">
+    <div>Copyright 2022 Zachary Zhang</div>
+    <a href="https://github.com/freymondz/studious-potato">Website GitHub Repository</a>
   </footer>
 </body>
 
