First version of responsiveness for mobile devices  - fixed system fonts to apply to all text  - teaked background color to be slightly darker

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Zachary Zhang</title>
 
   <meta name="description" content="My personal website with easy ways to contact me and checkout what I work on.">
-  <meta name="keywords" content="">
   <meta name="author" content="Zachary Zhang">
 
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
@@ -22,7 +21,9 @@
         <a href="https://www.linkedin.com/in/freymond/" class="button">Add me on LinkedIn</a>
     </header>
     <main>
-      Hello, I'm Zachary Zhang. I'm a student at the University of Washington Studying Informatics.
+      <p>
+        Hello, I'm Zachary Zhang. I'm a student at the University of Washington studying Informatics.
+      </p>
     </main>
   </div>
 
