--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
 
   <link rel="stylesheet" href="style.css">
+  <meta name="color-scheme" content="dark light">
 </head>
 
 <body class="flex column">
