Use SVG favicon instead of PNG

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="My personal website with easy ways to contact me and checkout what I work on.">
   <meta name="author" content="Zachary Zhang">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
+  <link rel="icon" href="/images/favicons/favicon.svg" type="image/svg+xml">
 
   <link rel="stylesheet" href="style.css">
   <meta name="color-scheme" content="dark light">
