--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="My personal website with easy ways to contact me and checkout what I work on.">
   <meta name="author" content="Zachary Zhang">
 
-  <link rel="icon" href="/images/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
 
   <link rel="stylesheet" href="style.css">
   <meta name="color-scheme" content="dark light">
@@ -18,8 +18,24 @@
 <body class="flex column">
   <div class="page-container flex center column">
     <header class="flex row">
-        <a href="https://github.com/freymondz" class="button">Check out my GitHub</a>
-        <a href="https://www.linkedin.com/in/freymond/" class="button">Add me on LinkedIn</a>
+      <span class="button">
+        <svg xmlns="http://www.w3.org/2000/svg" width="98" height="96">
+          <a href="https://github.com/freymondz" target="_parent" title="Check out my GitHub">
+            <rect width="100" height="100"/>
+            <path fill="#24292f" d="M49.04 0C21.92 0 0 22 0 49.22A49.2 49.2 0 0 0 33.53 95.9c2.44.49 3.33-1.06 3.33-2.36 0-1.15-.08-5.06-.08-9.13-13.64 2.93-16.48-5.87-16.48-5.87-2.2-5.7-5.44-7.17-5.44-7.17-4.47-3.01.32-3.01.32-3.01 4.96.32 7.55 5.05 7.55 5.05 4.39 7.5 11.45 5.38 14.3 4.07.4-3.18 1.7-5.38 3.08-6.6-10.88-1.14-22.33-5.37-22.33-24.28 0-5.38 1.95-9.78 5.03-13.2-.48-1.22-2.19-6.27.5-13.04 0 0 4.13-1.3 13.47 5.06a47.15 46.97 0 0 1 12.26-1.63c4.14 0 8.36.57 12.26 1.63 9.34-6.36 13.48-5.06 13.48-5.06 2.68 6.77.97 11.82.48 13.04a18.86 18.86 0 0 1 5.04 13.2c0 18.9-11.45 23.06-22.41 24.28 1.79 1.55 3.33 4.48 3.33 9.13 0 6.6-.08 11.9-.08 13.52 0 1.3.9 2.86 3.33 2.37A49.2 49.2 0 0 0 98 49.2 49.02 49.02 0 0 0 49.04.02Z"/>
+          </a>
+        </svg>
+      </span>
+      <span class="button">
+        <svg xmlns="http://www.w3.org/2000/svg" width="98" height="96">
+          <a href="https://www.linkedin.com/in/freymond/" target="_parent" title="Add me on LinkedIn">
+            <rect width="100" height="100"/>
+            <g class="inbug">
+              <path fill="#24292f" d="M82.48 0h-17.9C63.73 0 63 .68 63 1.51V19.5c0 .83.48 1.51 1.33 1.51h17.9c.86 0 1.77-.68 1.77-1.51v-18A1.5 1.5 0 0 0 82.48 0ZM71 8h2.83v1.44h.03c.43-.78 1.7-1.56 3.28-1.56 3.02 0 3.86 1.6 3.86 4.57V18h-3v-5c0-1.33-.53-2.5-1.77-2.5-1.51 0-2.23 1.02-2.23 2.7V18h-3zm-5 10h3V8h-3Zm3.38-13.5a1.88 1.88 0 1 1-3.75 0 1.88 1.88 0 0 1 3.75 0z" transform="matrix(4.66668 0 0 4.56865 -294 0)"/>
+            </g>
+          </a>
+        </svg>
+      </span>
     </header>
     <main>
       <p>
